Tweaking Swagger Documentation.