@@ -11,6 +11,7 @@ import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 
@@ -25,13 +26,13 @@ public class SwaggerConfig {
     );
 
     public static final ApiInfo DEFAULT_API_INFO = new ApiInfo(
-        "Awesome API Title",
+        "Tuskers API Title",
         "Awesome API Description",
         "1.0",
         "urn:tos", DEFAULT_CONTACT,
         "Apache 2.0",
         "https://www.apache.org/licenses/LICENSE-2.0",
-        Arrays.asList()
+        List.of()
     );
 
     private static final Set<String> DEFAULT_PRODUCES_AND_CONSUMES = new HashSet<>(
@@ -41,7 +42,9 @@ public class SwaggerConfig {
     @Bean
     public Docket api(){
         return new Docket( DocumentationType.SWAGGER_2 )
-                .apiInfo( DEFAULT_API_INFO );
+                .apiInfo( DEFAULT_API_INFO )
+                .produces( DEFAULT_PRODUCES_AND_CONSUMES )
+                .consumes( DEFAULT_PRODUCES_AND_CONSUMES );
     }
 
 }
